[package]
name = "todo_app"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
resolve-path = "0.1.0"
rmp-serde = "1.1.2"
serde = { version = "1.0.197", features = ["derive"] }
slint = "1.5.1"
